A hint about X-library folder installation on ubuntu 18.04 was given

--- a/readme.html
+++ b/readme.html
@@ -5,7 +5,7 @@
   This C code was contributed by C Linster.
   <p/>Example Use:<br/>
   ----------------<p/>
-  Build and run the executable:<pre>
+  Build and run the executable: (on ubuntu 18.04 the command "sudo apt install libxt-dev" had to be executed to supply the X-library folders):<pre>
   make -f neuron.mak
   ./neuron.run
   </pre>
